# Py_RasiAIChatbot_LLM

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
app/LLM/graph/: graph.py  state.py
app/LLM/graph/nodes/: assistant.py
app/LLM/graph/tools/: retrieve_tool.py
app/LLM/utilities/: checkpoint_memory.py  utilities.py
app/backend/: main.py
app/backend/router/: query_llm.py  vectors_store.py
app/backend/utilities/: utilities.py
app/vectors_store/delete_vectors/: delete_vectors.py
app/vectors_store/ingestion/: ingest_csv.py  ingest_doc.py  ingest_excel.py  ingest_json.py  ingest_pdf.py  ingest_ppt.py  ingest_txt.py
app/vectors_store/utilities/: utilities.py
